Update doc for Java17